@startuml
skinparam packageStyle rectangle
skinparam linetype ortho
skinparam classAttributeIconSize 0

package "Data Layer" #LightYellow {
    class InMemoryDatabase {
        -{static} Dictionary<string, User> _users
        -{static} List<Package> _packages
        -{static} Dictionary<string, string> _tokens
        +{static} AddUser(user: User)
        +{static} GetUser(username: string) : User?
        +{static} AddPackage(package: Package)
        +{static} GetPackage() : Package
        +{static} AddToken(token: string, username: string)
        +{static} GetUsernameFromToken(token: string) : string?
    }
}

package "Domain Models" #LightPink {
    class User {
        +string Username
        -string Password
        -List<Card> _stack
        +List<Card> Deck
        +int Coins
        +int Elo
        +AddCardToStack(card: Card)
        +AddCardToDeck(card: Card)
        +RemoveCardFromDeck(card: Card)
        +UpdateElo(change: int)
        +GetStack() : IReadOnlyList<Card>
        +ClearDeck()
        +UpdateCoins(newAmount: int)
    }

    class Package {
        -List<Card> Cards
        +{static} int PackagePrice
        -{static} int CardsPerPackage
        +AddCard(card: Card)
        +IsComplete() : bool
        +GetCards() : IReadOnlyList<Card>
    }

    abstract class Card {
        +string Id
        +string Name
        +int Damage
        +ElementType ElementType
        +ToString() : string
    }

    abstract class MonsterCard {
    }

    class SpellCard {
    }

    class Dragon {
    }

    class FireElf {
    }

    class Goblin {
    }

    class Knight {
    }

    class Kraken {
    }

    class Ork {
    }

    class Wizzard {
    }

    enum ElementType {
        Normal
        Fire
        Water
    }

    class LoginData {
        +string Username
        +string Password
    }
}

InMemoryDatabase ..> User : stores
InMemoryDatabase ..> Package : stores
User "1" o-- "*" Card : has in stack
User "1" o-- "4" Card : has in deck
Package "1" *-- "5" Card : contains
Card <|-- MonsterCard
Card <|-- SpellCard
MonsterCard <|-- Dragon
MonsterCard <|-- FireElf
MonsterCard <|-- Goblin
MonsterCard <|-- Knight
MonsterCard <|-- Kraken
MonsterCard <|-- Ork
MonsterCard <|-- Wizzard
Card "1" *-- "1" ElementType

note "Connection to Business Layer" as N1
@enduml